# jlab-jh5003-dongle

./: .gitignore
board/evb/framework/framework_gcc/: CMakeLists.txt
board/evb/usb_lib/gcc/: CMakeLists.txt
doc/: BT-AUDIO-SDK.html  (+2 more)
inc/: CMakeLists.txt
inc/app/: CMakeLists.txt  app_dual_audio_effect.h  app_msg.h  app_types.h  legacy_gaming.h  multitopology_ctrl.h  multitopology_if.h
inc/ble_mgr/: CMakeLists.txt  ble_ext_adv.h  ble_mgr.h  bt_gatt_client.h  bt_gatt_svc.h  bt_syscall.h
inc/ble_mgr/bond/: bt_bond_api.h  bt_bond_common.h  bt_bond_le.h  bt_bond_le_sync.h
inc/bluetooth/: CMakeLists.txt
inc/bluetooth/gap/: CMakeLists.txt  bt_direct_msg.h  bt_types.h  gap.h  gap_adv.h  gap_aox.h  gap_aox_conn.h  gap_aox_connless_receiver.h  gap_aox_connless_transmitter.h  gap_appearance.h  gap_big_mgr.h  gap_bond_le.h  gap_bond_manager.h  gap_br.h  gap_callback_le.h  gap_chann.h  gap_conn_le.h  gap_credit_based_conn.h  gap_dtm.h  gap_ecfc.h  gap_ext_adv.h  gap_ext_scan.h  gap_iso_data.h  gap_le.h  gap_le_types.h  gap_msg.h  gap_pa_adv.h  gap_pa_sync.h  gap_past_recipient.h  gap_past_sender.h  gap_privacy.h  gap_scan.h  gap_storage_le.h  gap_vendor.h  gatt_server_service_change.h  mpa.h
inc/bluetooth/leaudio/: CMakeLists.txt  aics_client.h  ascs_def.h  ascs_mgr.h  bap.h  bap_unicast_client.h  ble_audio.h  ble_audio_group.h  ble_audio_sync.h  broadcast_source_sm.h  bt_bond_mgr.h  cap.h  ccp_mgr.h  codec_def.h  codec_qos.h  csis_client.h  csis_mgr.h  gmas_client.h  gmas_mgr.h  has_client.h  has_def.h  has_mgr.h  mcp_mgr.h  mics_client.h  pacs_mgr.h  vcs_client.h  vocs_client.h
inc/bluetooth/profile/: CMakeLists.txt  gatt.h  gatt_builtin_services.h  profile_client.h  profile_client_def.h  profile_client_ext.h  profile_server.h  profile_server_def.h  profile_server_ext.h
inc/bluetooth/profile/client/: ams_client.h  ancs_client.h  bas_client.h  gaps_client.h  gatts_client.h  gcs_client.h  ipss_client.h  simple_ble_client.h
inc/bluetooth/profile/server/: bas.h  bas_config.h  cscs.h  cscs_config.h  dis.h  dis_config.h  gls.h  gls_config.h  hids.h  hrs.h  hts.h  ias.h  ipss.h  lls.h  lns.h  rscs.h  simple_ble_config.h  simple_ble_service.h  sps.h  sps_config.h  tps.h
inc/filesystem/: CMakeLists.txt  audio_fs.h  diskio.h  ffconf.h  mp3_parser.h
inc/framework/: CMakeLists.txt
inc/framework/audio/: CMakeLists.txt  anc.h  anc_tuning.h  audio.h  audio_passthrough.h  audio_pipe.h  audio_plugin.h  audio_probe.h  audio_route.h  audio_track.h  audio_type.h  audio_volume.h  eq.h  line_in.h  listen_save_buffer.h  nrec.h  ringtone.h  sidetone.h  tts.h  vad.h  voice_prompt.h  wdrc.h
inc/framework/bt/: CMakeLists.txt  bt_a2dp.h  bt_att.h  bt_avp.h  bt_avrcp.h  bt_hfp.h  bt_hfp_ag.h  bt_hid_device.h  bt_hid_host.h  bt_iap.h  bt_map.h  bt_opp.h  bt_pan.h  bt_pbap.h  bt_rdtp.h  bt_rfc.h  bt_sdp.h  bt_spp.h  btm.h
inc/framework/console/: CMakeLists.txt  cli.h  console.h
inc/framework/remote/: CMakeLists.txt  remote.h
inc/framework/sys/: CMakeLists.txt  sysm.h
inc/hal/: CMakeLists.txt
inc/hal/audio/: anc_driver.h  audio_pad.h  bin_loader_driver.h  codec_driver.h  dsp_driver.h  dsp_shm.h  sport_driver.h
inc/hal/io/: hw_tim.h  pwm.h  sd_define.h
inc/hal/platform/: aon_wdg_ext.h  ftl.h  hmac.h  platform_ext.h  platform_secp160r1.h  pm.h  vector_table_ext.h  wdg.h
inc/hal/power/: charger_utils.h  dlps_util.h  ext_buck.h  power_debug.h
inc/rtl87x3e/: CMakeLists.txt
inc/rtl87x3e/hal/: aes_cbc_api.h  aes_cmac_api.h  bt_bond.h  cache.h  cfg_item_api.h  crash_handle_ext.h  fmc_api.h  fmc_api_ext.h  hal_debug.h  hal_def.h  img_ctrl_ext.h  log_api.h  mfb_api.h  os_ext.h  ota_ext.h  platform_ext.h  pmu_api.h  stdlib_corecrt.h  storage.h  system_status_api.h  task_log_api.h
inc/rtl87x3e/hal/io/: hal_adp.h  hal_gpio.h  hal_gpio_int.h  hal_pinmux.h  io_dlps.h
inc/rtl87x3e/hal/stack/: bt_mac.h  low_stack.h
inc/rtl87x3e/io/: rtl8763_syson_reg.h  rtl876x_3wire_spi.h  rtl876x_adc.h  rtl876x_captouch.h  rtl876x_gdma.h  rtl876x_gpio.h  rtl876x_hw_aes.h  rtl876x_i2c.h  rtl876x_i2s.h  rtl876x_if8080.h  rtl876x_ir.h  rtl876x_keyscan.h  rtl876x_lpc.h  rtl876x_nvic.h  rtl876x_pinmux.h  rtl876x_qdec.h  rtl876x_rcc.h  rtl876x_rtc.h  rtl876x_sleep_led.h  rtl876x_spi.h  rtl876x_tim.h  rtl876x_uart.h  rtl876x_wdg.h  sd.h
inc/rtl87x3e/os/: os_mem.h  os_msg.h  os_pool.h  os_queue.h  os_sched.h  os_sync.h  os_task.h  os_timer.h
inc/rtl87x3e/platform/: adc_manager.h  aes_api.h  charger_api.h  compiler_abstraction.h  crc16btx.h  dma_channel.h  errno.h  feature_check.h  mem_types.h  patch_header_check.h  platform_utils.h  ring_buffer.h  rom_uuid.h  rtl876x.h  section.h  sha256.h  syncclk_driver.h  trace.h  vector_table.h
inc/rtl87x3ep/hal/: aes_cbc_api.h  aes_cmac_api.h  aon_wdg_ext.h  bin_loader.h  cache.h  cfg_item_api.h  crash_handle_ext.h  crc32.h  crc8.h  fmc_api.h  fmc_api_ext.h  hal_def.h  img_ctrl_ext.h  log_api.h  os_ext.h  pm.h  pmu_api.h  rtl876x_captouch.h  rtl876x_sleep_led.h  stdlib_corecrt.h  storage.h  system_status_api.h
inc/rtl87x3ep/io/: rtl876x_aon_reg.h  rtl876x_gdma.h  rtl876x_i2c.h  rtl876x_i2s.h  rtl876x_if8080.h  rtl876x_ir.h  rtl876x_keyscan.h  rtl876x_lpc.h  rtl876x_nvic.h  rtl876x_pinmux.h  rtl876x_rcc.h  rtl876x_rtc.h  rtl876x_sdio.h  rtl876x_spi.h  rtl876x_tim.h  rtl876x_trng.h  rtl876x_uart.h  rtl876x_wdg.h  rtl_can.h  rtl_can_def.h  sd.h
inc/rtl87x3ep/os/: os_msg.h  os_pool.h  os_sched.h  os_trace.h
inc/rtl87x3ep/platform/: aes_api.h  bin_loader_driver.h  compiler_abstraction.h  crc16btx.h  debug_monitor.h  dma_channel.h  feature_check.h  ftl_api.h  mem_types.h  patch_header_check.h  platform_rtc.h  platform_utils.h  ring_buffer.h  rom_uuid.h  rtl876x.h  section.h  sha256.h  syncclk_driver.h  trace.h  vector_table.h
inc/service/: CMakeLists.txt
inc/usb/: CMakeLists.txt  port_macro.h  usb_utils.h
inc/usb/bc12/: usb_bc12_api.h
inc/usb/class/: usb_audio_driver.h  usb_cdc_driver.h  usb_hid_driver.h  usb_hid_spec.h  usb_ms_driver.h  usb_pipe.h
inc/usb/composite/: usb_composite_dev.h  usb_dev_driver.h  usb_dm.h
inc/usb/hal/: CMakeLists.txt  hal_usb.h
(+11229 files in other folders)
